force-app/main/default/objects/CS_ArchivedRecordsDeleteBatch__c/CS_ArchivedRecordsDeleteBatch__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Archived Records Delete Batch Context</label>
</CustomObject>