force-app/main/default/objects/CS_ArchivedRecordsDeleteBatch__c/fields/CurrentBatchId__c.field-meta.xml
<CustomField>
    <fullName>CurrentBatchId__c</fullName>
    <label>Current Batch Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>