force-app/main/default/objects/CS_ArchivedRecordsDeleteBatch__c/fields/ExecutionTimestamp__c.field-meta.xml
<CustomField>
    <fullName>ExecutionTimestamp__c</fullName>
    <label>Execution Timestamp</label>
    <type>DateTime</type>
</CustomField>